# Furnace

./: CMakeLists.txt  README.md
scripts/: buildat.sh  fastbuild.sh
src/: Furnace.c
tests/: test_main.c  test_utils.h
